# libmcutils

./: .gitignore  AUTHORS.txt  CHANGELOG  CMakeLists.txt  CMakePresets.json  Dockerfile  Doxyfile  Jenkinsfile  Jenkinsfile.linux  Jenkinsfile.win  LICENSE  README.md  build.bat  build.py  build.sh  build_and_install.bat  build_and_install.py  build_and_install.sh  clean.bat  clean.py  clean.sh  cpplint-report.txt  deb_libmcutils_amd64.control  generate_coverage-report.py  generate_coverage-report.sh  generate_documentation.py  generate_doxygen_docs.sh  lcov_exclude.txt  libmcutils.pro  run_checks.py  run_cloc.sh  run_cppcheck.sh  run_cpplint.sh  run_tests.bat  run_tests.py  run_tests.sh
mcutils/: CMakeLists.txt  Result.h  Types.h  defs.h  doxygen.h  mcutil.pri  mcutil.pro  mcutils.cpp  mcutils.pri  mcutils.pro  units_utils.cpp  units_utils.h
mcutils/astro/: AzEl.h  CMakeLists.txt  Coordinates.h  Ephemeris.cpp  Ephemeris.h  GregorianCal.cpp  GregorianCal.h  J2000.cpp  J2000.h  JulianDate.cpp  JulianDate.h  RaDec.h  Utils.cpp  Utils.h
mcutils/control/: BandPassFilter.h  BandStopFilter.h  CMakeLists.txt  Filter2.cpp  Filter2.h  HighPassFilter.cpp  HighPassFilter.h  IControlElement.h  ISignalElement.h  Lag.cpp  Lag.h  Lag2.cpp  Lag2.h  Lead.cpp  Lead.h  LeadLag.cpp  LeadLag.h  LowPassFilter.cpp  LowPassFilter.h  MovingAverageFilter.cpp  MovingAverageFilter.h  MovingMedianFilter.cpp  MovingMedianFilter.h  Oscillator.cpp  Oscillator.h  PID.cpp  PID.h  System2.cpp  System2.h
mcutils/ctrl/: AWBackCalc.cpp  AWBackCalc.h  AWCondCalc.cpp  AWCondCalc.h  AWFilter.cpp  AWFilter.h  AntiWindupPID.cpp  AntiWindupPID.h  BandPassFilter.cpp  BandPassFilter.h  BandStopFilter.cpp  BandStopFilter.h  CMakeLists.txt  Gain.cpp  Gain.h  HighPassFilter.cpp  HighPassFilter.h  IAntiWindup.h  IControlElement.h  ICtrlElement.h  Inertia.cpp  Inertia.h  Inertia2.cpp  Inertia2.h  Lag.cpp  Lag.h  Lag2.cpp  Lag2.h  Lead.cpp  Lead.h  LeadLag.cpp  LeadLag.h  LowPassFilter.cpp  LowPassFilter.h  MovingAverage.cpp  MovingAverage.h  MovingAverageFilter.cpp  MovingAverageFilter.h  MovingMedian.cpp  MovingMedian.h  (+18 more)
mcutils/datatree/: CMakeLists.txt  DataRef.h  DataTree.cpp  DataTree.h  GroupNode.cpp  GroupNode.h  Node.h  NodeType.h  ValueNode.h
mcutils/geo/: CMakeLists.txt  DataMars.h  DataWGS84.h  ECEF.cpp  ECEF.h  Ellipsoid.cpp  Ellipsoid.h  Geo.h  Mars2015.h  Mercator.cpp  Mercator.h  WGS84.cpp  WGS84.h
mcutils/math/: Angles.cpp  Angles.h  CMakeLists.txt  DegMinSec.cpp  DegMinSec.h  DimensionalVector.h  EulerRect.cpp  EulerRect.h  GaussJordan.h  Geometry.cpp  Geometry.h  IIntegrator.h  Integrator.h  Math.h  Matrix.cpp  Matrix.h  Matrix3x3.cpp  Matrix3x3.h  Matrix4x4.cpp  Matrix4x4.h  Matrix6x6.cpp  Matrix6x6.h  MatrixMxN.h  MatrixNxN.h  MatrixSq.h  MatrixSquare.h  Quaternion.cpp  Quaternion.h  RMatrix.cpp  RMatrix.h  Random.cpp  Random.h  RotMatrix.cpp  RotMatrix.h  RungeKutta4.cpp  RungeKutta4.h  SegPlaneIsect.cpp  SegPlaneIsect.h  Table.cpp  Table.h  (+15 more)
mcutils/misc/: CMakeLists.txt  Check.h  Log.cpp  Log.h  Map.h  MapUtils.h  Polymorphic.h  PolymorphicBase.h  PtrUtils.h  Singleton.h  String.cpp  String.h  Units.cpp  Units.h
mcutils/net/: CMakeLists.txt  Endianness.cpp  Endianness.h
mcutils/physics/: CMakeLists.txt  Constants.h  Inertia.h  ParallelAxis.h  Physics.h  Vector.h
mcutils/signal/: CMakeLists.txt  Filter2.cpp  Filter2.h  HighPassFilter.cpp  HighPassFilter.h  ISignalElement.h  Lag.cpp  Lag.h  Lag2.cpp  Lag2.h  Lead.cpp  Lead.h  LeadLag.cpp  LeadLag.h  LowPassFilter.cpp  LowPassFilter.h  MovingAverageFilter.cpp  MovingAverageFilter.h  MovingMedianFilter.cpp  MovingMedianFilter.h  PID.cpp  PID.h
mcutils/time/: CMakeLists.txt  ClockTime.h  DateTime.h  ISO8601.cpp  ISO8601.h  Timer.cpp  Timer.h
mcutils/xml/: CMakeLists.txt  XmlDoc.cpp  XmlDoc.h  XmlNode.cpp  XmlNode.h
misc/: Dockerfile  (+5 more)
tests/: CMakeLists.txt  CsvFileReader.cpp  CsvFileReader.h  DiffEquationSolver.cpp  DiffEquationSolver.h  TestDummy.cpp  TestingEnvironment.cpp  TestingUtils.cpp  TestingUtils.h  XcosBinFileReader.cpp  XcosBinFileReader.h  main.cpp  tests.pri  tests.pro
tests/astro/: TestEphemeris.cpp  TestGregorianCal.cpp  TestJulianDate.cpp  TestRaDec2AzEl.cpp
tests/control/: TestFilter2.cpp  TestHighPassFilter.cpp  TestLag.cpp  TestLag2.cpp  TestLead.cpp  TestLeadLag.cpp  TestLowPassFilter.cpp  TestMovingAverageFilter.cpp  TestMovingMedianFilter.cpp  TestOscillator.cpp  TestPID.cpp  TestSystem2.cpp
tests/ctrl/: TestAWBackCalc.cpp  TestAWCondCalc.cpp  TestAWFilter.cpp  TestAntiWindupPID.cpp  TestBandPassFilter.cpp  TestGain.cpp  TestHighPassFilter.cpp  TestInertia.cpp  TestInertia2.cpp  TestLag.cpp  TestLag2.cpp  TestLead.cpp  TestLeadLag.cpp  TestLowPassFilter.cpp  TestMovingAverage.cpp  TestMovingAverageFilter.cpp  TestMovingMedian.cpp  TestMovingMedianFilter.cpp  TestOscillator.cpp  TestPID.cpp  TestPID_BackCalc.cpp  TestPID_CondCalc.cpp  TestPID_FilterAW.cpp  TestStateSpace.cpp  TestSystem2.cpp  TestZeroOrderHold.cpp
tests/datatree/: TestDataRef.cpp  TestDataTree.cpp  TestGroupNode.cpp  TestNode.cpp  TestValueNode.cpp
tests/geo/: TestDataMars.cpp  TestDataWGS84.cpp  TestECEF.cpp  TestEllipsoid.cpp  TestMercator.cpp  TestWGS84.cpp
tests/math/: TestAngles.cpp  TestDegMinSec.cpp  TestDimensionalVector.cpp  TestEulerRect.cpp  TestGaussJordan.cpp  TestGeometry.cpp  TestMath.cpp  TestMatrix.cpp  TestMatrix3x3.cpp  TestMatrix3x3_Armadillo.cpp  TestMatrix4x4.cpp  TestMatrix4x4_Armadillo.cpp  TestMatrix6x6.cpp  TestMatrix6x6_Armadillo.cpp  TestMatrixMxN.cpp  TestMatrixMxN_Armadillo.cpp  TestMatrixNxN.cpp  TestMatrixNxN_Armadillo.cpp  TestMatrixSq.cpp  TestQuaternion.cpp  TestRMatrix.cpp  TestRandom.cpp  TestRotMatrix.cpp  TestRungeKutta4.cpp  TestSegPlaneIsect.cpp  TestTable.cpp  TestTable2.cpp  TestTable2D.cpp  TestUVector3.cpp  TestVector.cpp  TestVector3.cpp  TestVector4.cpp  TestVector6.cpp  TestVectorN.cpp
tests/misc/: TestCheck.cpp  TestLog.cpp  TestMapUtils.cpp  TestPtrUtils.cpp  TestString.cpp  TestUnits.cpp
tests/net/: TestEndianness.cpp
tests/physics/: TestInertia.cpp  TestParallelAxis.cpp  TestPhysics.cpp
(+91 files in other folders)
